--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 <div id="container">
 
   <section class="page active">
-    <h1>江苏保险大处</h1>
+    <h1>江苏保险大厦</h1>
     <p>安徽安绿园携手共建生态农产品供应链</p>
     <div class="images-container">
       <img src="https://i.postimg.cc/LsXzKc9F/2.jpg" alt="图片描述">
@@ -158,7 +158,7 @@
 
   <section class="page">
     <h1>好山：大别山</h1>
-    <p>安绿园生态农产品基地位于大别山腹地--霍山县，海报超过400米。</p>
+    <p>安绿园生态农产品基地位于大别山腹地--霍山县，海拔超过400米。</p>
     <div class="images-container">
       <img src="https://i.postimg.cc/dt6b5CDN/2.jpg" alt="图片2">
       <img src="https://i.postimg.cc/NMRVm9W4/OIP.jpg" alt="图片3">
@@ -166,8 +166,8 @@
   </section>
 
   <section class="page">
-    <h1>好水：剔水</h1>
-    <p>基地使用剔水作为灌溉源，靠近国家级生态水库--佛子岭水库</p>
+    <h1>好水：剐水</h1>
+    <p>基地使用剐水作为灌溉源，靠近国家级生态水库--佛子岭水库</p>
     <div class="images-container">
       <img src="https://i.postimg.cc/wx02PQcN/OIP.jpg" alt="图片4">
     </div>
@@ -175,7 +175,7 @@
 
   <section class="page">
     <h1>绿色农产品</h1>
-    <p>所有农产品均为应季自然生长，并通过国家级绿色产品证认</p>
+    <p>所有农产品均为应季自然生长，并通过国家级绿色产品认证</p>
     <div class="images-container">
       <img src="https://i.postimg.cc/dtDP3BqR/image.jpg" alt="图片5">
       <img src="https://i.postimg.cc/QdW2kdKH/3.jpg" alt="图片6">
