--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
   </section>
   <section class="page">
     <h1>绿色农产品</h1>
-    <p>所有农产品均应季自然生长<br/>并通过国家级绿色产品</p>
+    <p>所有农产品应季自然生长<br/>并通过国家级绿色产品</p>
     <div class="images-container">
 	  <img src="https://i.postimg.cc/kgv96mrp/2.jpg" alt="认证产品2">
     <img src="https://i.postimg.cc/QdW2kdKH/3.jpg" alt="图片6">
@@ -288,7 +288,7 @@
   </section>
 
   <section class="page">
-    <h1>绿色蔬菜大礼包</h1>
+    <h1>绿色蔬菜礼包</h1>
     <p>净重量不少于8斤，8种应季蔬菜+葱姜蒜</p>
     <p>单次卡：88元<br/>月卡（四次）：338元<br/>季卡（12次）：998元</p>
     <div class="images-container">
